# Raylib-Base

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini
cmake/: Dependencies.cmake  Warnings.cmake
src/: main.cpp
src/shaders/: basic.fs  basic.vs
